# drop-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
droplet/: __init__.py  agent.py  backend.py  config_manager.py  dbg_tools.py  generation_orchestrator.py  main.py  rich_cl.py  rich_help.py  rich_terminal.py  rits_utils.py
droplet/converters/: __init__.py  base.py  granite.py  harmony.py  registry.py
droplet/tools/: __init__.py  base.py  bcp_browser.py  file_browser.py  milvus_retriever.py  python_tool.py  semantic_scholar.py  wikipedia_browser.py
scripts/: extract_imports.py  install_bcp.sh  launch_bcp_tool.sh  log_analysis.py  preload_tiktoken.py  run_droplet_bcp_eval.py
scripts/bcp/: config-gpt-oss-120b-compact-mt10k-KL5R10.sh  config-gpt-oss-120b-compact-mt10k-LLMKL5R10.sh  config-gpt-oss-120b-compact-mt10k-LLMR10.sh  config-gpt-oss-120b-mt10k.sh  config-gpt-oss-120b.sh  config-gpt-oss-20b-auto-clear.sh  config-gpt-oss-20b.sh  run_eval.py  run_eval.sh
tests/: all.sh  test_bcp_browser.py  test_folder_summary.py  test_milvus_retriever.py  test_ollama.py  test_paper_search.py  test_python_sandbox.py  test_python_tool.py  test_read_file.py  test_wikipedia_search.py
